# computer-vision

./: .gitignore  README.md
Analisi di immagini e dati volumetrici/Python/: pyproject.toml
Analisi di immagini e dati volumetrici/Python/1. Acquisizione/: README.md  cloudpoint.py  ply_io.py  proj.py  range2xyz.py  rangetomesh.py
Analisi di immagini e dati volumetrici/Python/10. Analisi spettrale di forme 3D/: mesh_laplacian.py  spectral_analysis.py
Analisi di immagini e dati volumetrici/Python/10. Analisi spettrale di forme 3D/models/: Centaur_null.ply  Male_isometric.ply
Analisi di immagini e dati volumetrici/Python/2. Trasformazione rigida/: Rigid_transformation.py  Rigid_transformation_2.py
Analisi di immagini e dati volumetrici/Python/3. Pre-allineamento con PCA/: pca_registration.py  utils.py
Analisi di immagini e dati volumetrici/Python/4. Registrazione con pairwise 3D/: pairwise_registration.py  utils.py
Analisi di immagini e dati volumetrici/Python/5. Registrazione con ICP x84/: icp_x84_registration.py  utils.py
Analisi di immagini e dati volumetrici/Python/6. Registrazione MultiView/: Multiview_registration.py  utils.py
Analisi di immagini e dati volumetrici/Python/6. Registrazione MultiView/Bunny/: bunny-range-001.ply  (+8 more)
Analisi di immagini e dati volumetrici/Python/7. Generazione mesh poligonale da mappa range/: range2xyz.py  utils.py
Analisi di immagini e dati volumetrici/Python/8. Generazione mesh con Meshlab/: run_pymeshlab.py
Analisi di immagini e dati volumetrici/Python/9. Geometria differenziale/: Curvatura_media.py  utils.py
(+80 files in other folders)
