[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imageio>=2.37.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "open3d>=0.19.0",
    "opencv-python>=4.11.0.86",
    "plotly>=6.3.0",
    "plyfile>=1.1.2",
    "pyglet<2",
    "pymeshlab>=2025.7",
    "pyqt6>=6.9.1",
    "scipy>=1.16.1",
    "tqdm>=4.67.1",
    "trimesh>=4.8.1",
]
